dev:changed css config to scc for future components

--- a/angular.json
+++ b/angular.json
@@ -123,5 +123,10 @@
       }
     }
   },
-  "defaultProject": "eventportal-web"
+  "defaultProject": "eventportal-web",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
